begin desktop styling of projects

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">My Portfolio Website</h2>
             <div class="project-body">
-              <h2 class="project-title">My Portfolio Website</h2>
               <p>A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) & ScrollMagic powered
                 animations to provide a fluid UI.</p>
             </div>
@@ -137,8 +137,8 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">Password Management Application</h2>
             <div class="project-body">
-              <h2 class="project-title">Password Management Application</h2>
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
               </div>
@@ -154,8 +154,8 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">Blog/Social Application</h2>
             <div class="project-body">
-              <h2 class="project-title">Blog/Social Application</h2>
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
               </div>
@@ -172,8 +172,8 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">Live Weather Dashboard</h2>
             <div class="project-body">
-              <h2 class="project-title">Live Weather Dashboard</h2>
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-weatherdash-iphone-mockup 1.png" alt="">
               </div>
@@ -190,8 +190,8 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">Health/Fitness Plan Application</h2>
             <div class="project-body">
-              <h2 class="project-title">Health/Fitness Plan Application</h2>
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png " alt="">
               </div>
@@ -208,9 +208,9 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">Automatic Website Generator</h2>
             <div class="project-body">
-              <h2 class="project-title">Automatic Website Generator</h2>
-              <div class="project-img-wrap">
+              <div class="project-img-wrap" id="laptop-wrap">
                 <img class="laptop-mockup" src="./assets/images/mockups/team-profile-gen-laptop-mockup.png" alt="">
               </div>
               <p>Quickly generate a website displaying your team of employees through a command line app built with
@@ -227,8 +227,8 @@
 
         <!-- <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">Daily Calendar Application</h2>
             <div class="project-body">
-              <h2 class="project-title">Daily Calendar Application</h2>
               <p>A simple browser calendar application that allows a user to save events in local storage for each hour
                 of
                 the day.</p>
@@ -243,8 +243,8 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">Coding Quiz Application</Q></h2>
             <div class="project-body">
-              <h2 class="project-title">Coding Quiz Application</Q></h2>
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-coding-quiz-iphone-mockup 1.png" alt="">
               </div>
@@ -262,9 +262,9 @@
 
         <div class="project-card">
           <div class="project-content">
+            <h2 class="project-title">README Generator</h2>
             <div class="project-body">
-              <h2 class="project-title">README Generator</h2>
-              <div class="project-img-wrap">
+              <div class="project-img-wrap" id="laptop-wrap">
                 <img class="laptop-mockup" src="./assets/images/mockups/readme-gen-laptop-mockup.png" alt="">
               </div>
               <p>A Node.js command line app that gathers prompted information from the user to dynamically generate a
