--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="project-content">
             <h2 class="project-title">My Portfolio Website</h2>
             <div class="project-body">
-              <p>A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) & ScrollMagic powered
+              <p class="project-p">A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) & ScrollMagic powered
                 animations to provide a fluid UI.</p>
             </div>
             <div class="project-footer">
@@ -138,11 +138,11 @@
         <div class="project-card">
           <div class="project-content">
             <h2 class="project-title">Password Management Application</h2>
-            <div class="project-body">
+            <div class="project-body project-body-flipped">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
               </div>
-              <p>Pass-stache is a powerful password storage tool, built with a team of 4 other developers.</p>
+              <p class="project-p project-p-flipped">Pass-stache is a powerful password storage tool, built with a team of 4 other developers.</p>
             </div>
             <div class="project-footer">
               <a href="https://thawing-temple-09016.herokuapp.com/" target="_blank">Visit Website</a> //
@@ -159,7 +159,7 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
               </div>
-              <p>Solo built, full stack site where users can view and create blog posts and interact via the comments.
+              <p class="project-p">Solo built, full stack site where users can view and create blog posts and interact via the comments.
               </p>
             </div>
             <div class="project-footer">
@@ -173,11 +173,11 @@
         <div class="project-card">
           <div class="project-content">
             <h2 class="project-title">Live Weather Dashboard</h2>
-            <div class="project-body">
+            <div class="project-body project-body-flipped">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-weatherdash-iphone-mockup 1.png" alt="">
               </div>
-              <p>A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data
+              <p class="project-p project-p-flipped">A one-page site built with jQuery and Bootstrap that uses the OpenWeather API to retrieve forecast data
                 in specific cities. Local storage saves a search history.</p>
             </div>
             <div class="project-footer">
@@ -195,7 +195,7 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png " alt="">
               </div>
-              <p>Git N Shape is a health and fitness jump starter app that generates tailored workout and nutrition
+              <p class="project-p">Git N Shape is a health and fitness jump starter app that generates tailored workout and nutrition
                 plans for users. Built with a team of 3 other developers.</p>
             </div>
             <div class="project-footer">
@@ -209,11 +209,11 @@
         <div class="project-card">
           <div class="project-content">
             <h2 class="project-title">Automatic Website Generator</h2>
-            <div class="project-body">
+            <div class="project-body project-body-flipped">
               <div class="project-img-wrap" id="laptop-wrap">
                 <img class="laptop-mockup" src="./assets/images/mockups/team-profile-gen-laptop-mockup.png" alt="">
               </div>
-              <p>Quickly generate a website displaying your team of employees through a command line app built with
+              <p class="project-p project-p-flipped">Quickly generate a website displaying your team of employees through a command line app built with
                 Node.js. Created with a focus on object oriented programming and test driven development.
               </p>
             </div>
@@ -248,7 +248,7 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-coding-quiz-iphone-mockup 1.png" alt="">
               </div>
-              <p>Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and decrease your
+              <p class="project-p">Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and decrease your
                 score.
               </p>
             </div>
@@ -263,11 +263,11 @@
         <div class="project-card">
           <div class="project-content">
             <h2 class="project-title">README Generator</h2>
-            <div class="project-body">
+            <div class="project-body project-body-flipped">
               <div class="project-img-wrap" id="laptop-wrap">
                 <img class="laptop-mockup" src="./assets/images/mockups/readme-gen-laptop-mockup.png" alt="">
               </div>
-              <p>A Node.js command line app that gathers prompted information from the user to dynamically generate a
+              <p class="project-p project-p-flipped">A Node.js command line app that gathers prompted information from the user to dynamically generate a
                 professional README document, letting developers focus more on their code.</p>
             </div>
             <div class="project-footer">
