left/right revealers

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
 
         <h1 class="section-title">Projects</h1>
 
-        <div class="project-card">
-          <div class="project-content">
+        <div class="project-card odd">
+          <div class="project-content-odd">
             <h2 class="project-title">My Portfolio Website</h2>
-            <div class="project-body">
+            <div class="project-body-odd">
               <div class="project-img-wrap">
                 <svg id="th-pencil-svg" viewBox="0 0 264 145" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g id="th">
@@ -149,9 +149,8 @@
                       transform="rotate(44.3314 247.574 23.6018)" fill="#DE7254" />
                   </g>
                 </svg>
-
               </div>
-              <p class="project-p">A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) &
+              <p class="project-p project-p-odd">A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) &
                 ScrollMagic powered
                 animations to provide a fluid UI.</p>
             </div>
@@ -160,17 +159,17 @@
               <a href="https://github.com/SadboiTay/portfolio2.0" target="_blank">View Code</a>
             </div>
           </div>
-          <div class="project-revealer"></div>
+          <div class="project-revealer-odd"></div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card even">
           <div class="project-content">
             <h2 class="project-title">Password Management Application</h2>
-            <div class="project-body project-body-flipped">
+            <div class="project-body">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
               </div>
-              <p class="project-p project-p-flipped">Pass-stache is a powerful password storage tool, built with a team
+              <p class="project-p">Pass-stache is a powerful password storage tool, built with a team
                 of 4 other developers.</p>
             </div>
             <div class="project-footer">
@@ -181,14 +180,14 @@
           <div class="project-revealer"></div>
         </div>
 
-        <div class="project-card">
-          <div class="project-content">
+        <div class="project-card odd">
+          <div class="project-content-odd">
             <h2 class="project-title">Blog/Social Application</h2>
-            <div class="project-body">
+            <div class="project-body-odd">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
               </div>
-              <p class="project-p">Solo built, full stack site where users can view and create blog posts and interact
+              <p class="project-p project-p-odd">Solo built, full stack site where users can view and create blog posts and interact
                 via the comments.
               </p>
             </div>
@@ -197,10 +196,10 @@
                 href="https://github.com/SadboiTay/tech-blog" target="_blank">View Code</a>
             </div>
           </div>
-          <div class="project-revealer"></div>
+          <div class="project-revealer-odd"></div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card even">
           <div class="project-content">
             <h2 class="project-title">Live Weather Dashboard</h2>
             <div class="project-body project-body-flipped">
@@ -219,14 +218,14 @@
           <div class="project-revealer"></div>
         </div>
 
-        <div class="project-card">
-          <div class="project-content">
+        <div class="project-card odd">
+          <div class="project-content-odd">
             <h2 class="project-title">Health/Fitness Plan Application</h2>
-            <div class="project-body">
+            <div class="project-body-odd">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png " alt="">
               </div>
-              <p class="project-p">Git N Shape is a health and fitness jump starter app that generates tailored workout
+              <p class="project-p project-p-odd">Git N Shape is a health and fitness jump starter app that generates tailored workout
                 and nutrition
                 plans for users. Built with a team of 3 other developers.</p>
             </div>
@@ -235,17 +234,17 @@
                 href="https://github.com/austinxewell/git-n-shape" target="_blank">View Code</a>
             </div>
           </div>
-          <div class="project-revealer"></div>
+          <div class="project-revealer-odd"></div>
         </div>
 
-        <div class="project-card">
+        <div class="project-card even">
           <div class="project-content">
             <h2 class="project-title">Automatic Website Generator</h2>
-            <div class="project-body project-body-flipped">
+            <div class="project-body">
               <div class="project-img-wrap" id="laptop-wrap">
                 <img class="laptop-mockup" src="./assets/images/mockups/team-profile-gen-laptop-mockup.png" alt="">
               </div>
-              <p class="project-p project-p-flipped">Quickly generate a website displaying your team of employees
+              <p class="project-p">Quickly generate a website displaying your team of employees
                 through a command line app built with
                 Node.js. Created with a focus on object oriented programming and test driven development.
               </p>
@@ -274,14 +273,14 @@
           <div class="project-revealer"></div>
         </div> -->
 
-        <div class="project-card">
-          <div class="project-content">
+        <div class="project-card odd">
+          <div class="project-content-odd">
             <h2 class="project-title">Coding Quiz Application</Q></h2>
-            <div class="project-body">
+            <div class="project-body-odd">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-coding-quiz-iphone-mockup 1.png" alt="">
               </div>
-              <p class="project-p">Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and
+              <p class="project-p project-p-odd">Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and
                 decrease your
                 score.
               </p>
@@ -291,7 +290,7 @@
                 href="https://github.com/SadboiTay/code-quiz" target="_blank">View Code</a>
             </div>
           </div>
-          <div class="project-revealer"></div>
+          <div class="project-revealer-odd"></div>
         </div>
 
         <div class="project-card">
