--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <div class="project-card odd">
           <div class="project-content-odd">
             <h2 class="project-title">My Portfolio Website</h2>
+            <h3 class="project-techlist">-CSS, SVG, GSAP, ScrollMagic-</h3>
             <div class="project-body-odd">
               <div class="project-img-wrap">
                 <svg id="th-pencil-svg" viewBox="0 0 264 145" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -165,6 +166,7 @@
         <div class="project-card even">
           <div class="project-content">
             <h2 class="project-title">Password Management Application</h2>
+            <h3 class="project-techlist">-Node.js, Express.js, ReST API MySQL-</h3>
             <div class="project-body">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
@@ -183,6 +185,7 @@
         <div class="project-card odd">
           <div class="project-content-odd">
             <h2 class="project-title">Blog/Social Application</h2>
+            <h3 class="project-techlist">-MVC, Handlebars.js, Sequelize ORM-</h3>
             <div class="project-body-odd">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
@@ -202,6 +205,7 @@
         <div class="project-card even">
           <div class="project-content">
             <h2 class="project-title">Live Weather Dashboard</h2>
+            <h3 class="project-techlist">-jQuery, Bootstrap-</h3>
             <div class="project-body project-body-flipped">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-weatherdash-iphone-mockup 1.png" alt="">
@@ -221,6 +225,7 @@
         <div class="project-card odd">
           <div class="project-content-odd">
             <h2 class="project-title">Health/Fitness Plan Application</h2>
+            <h3 class="project-techlist">-Bulma, GSAP-</h3>
             <div class="project-body-odd">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png " alt="">
@@ -240,6 +245,7 @@
         <div class="project-card even">
           <div class="project-content">
             <h2 class="project-title">Automatic Website Generator</h2>
+            <h3 class="project-techlist">-Node.js, inquirer npm, OOP-</h3>
             <div class="project-body">
               <div class="project-img-wrap" id="laptop-wrap">
                 <img class="laptop-mockup" src="./assets/images/mockups/team-profile-gen-laptop-mockup.png" alt="">
@@ -276,6 +282,7 @@
         <div class="project-card odd">
           <div class="project-content-odd">
             <h2 class="project-title">Coding Quiz Application</Q></h2>
+            <h3 class="project-techlist">-HTML, CSS, Javascript-</h3>
             <div class="project-body-odd">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-coding-quiz-iphone-mockup 1.png" alt="">
@@ -296,6 +303,7 @@
         <div class="project-card">
           <div class="project-content">
             <h2 class="project-title">README Generator</h2>
+            <h3 class="project-techlist">-Node.js, inquirer npm, markdown-</h3>
             <div class="project-body project-body-flipped">
               <div class="project-img-wrap" id="laptop-wrap">
                 <img class="laptop-mockup" src="./assets/images/mockups/readme-gen-laptop-mockup.png" alt="">
@@ -335,7 +343,6 @@
           <div class="about-title-container">
             <h1 id="about-title" class="section-title">About</h1>
           </div>
-
           <svg id="portal-scene" viewBox="0 0 1096 820" fill="none" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink">
             <a href="https://open.spotify.com/user/t.hakes?si=3c66d8181f9a4bed" target="_blank">
