remove techlist gradient

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="project-card even">
           <div class="project-content">
             <h2 class="project-title">Password Management Application</h2>
-            <h3 class="project-techlist">-Node.js, Express.js, ReST API MySQL-</h3>
+            <h3 class="project-techlist">-Node.js, Express.js, ReST API, MySQL-</h3>
             <div class="project-body">
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-pass-stache-iphone-mockup.png " alt="">
