nav link hovers

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
     <div id="menu-slider4" class="menu-page-slider"></div>
     <div class="menu-page">
       <ul>
-        <li class="nav-links">
+        <li id="home-navlink" class="nav-links">
           <a href="#">Home</a>
         </li>
-        <li class="nav-links">
+        <li id="projects-navlink" class="nav-links">
           <a href="#projects">Projects</a>
         </li>
-        <li class="nav-links">
+        <li id="about-navlink" class="nav-links">
           <a href="#about">About</a>
         </li>
-        <li class="nav-links">
+        <li id="contact-navlink" class="nav-links">
           <a href="#contact">Contact</a>
         </li>
       </ul>
