google global site tag added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/touch-icon-iphone-retina.png">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X36CVYVT19"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-X36CVYVT19');
+  </script>
   <title>T. Hakes | Web Developer</title>
 </head>
 
@@ -151,7 +160,8 @@
                   </g>
                 </svg>
               </div>
-              <p class="project-p project-p-odd">A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) &
+              <p class="project-p project-p-odd">A Responsive website that utilizes the power of creative SVG, Greensock
+                (GSAP) &
                 ScrollMagic powered
                 animations to provide a fluid UI.</p>
             </div>
@@ -190,7 +200,8 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
               </div>
-              <p class="project-p project-p-odd">Solo built, full stack site where users can view and create blog posts and interact
+              <p class="project-p project-p-odd">Solo built, full stack site where users can view and create blog posts
+                and interact
                 via the comments.
               </p>
             </div>
@@ -230,7 +241,8 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png " alt="">
               </div>
-              <p class="project-p project-p-odd">Git N Shape is a health and fitness jump starter app that generates tailored workout
+              <p class="project-p project-p-odd">Git N Shape is a health and fitness jump starter app that generates
+                tailored workout
                 and nutrition
                 plans for users. Built with a team of 3 other developers.</p>
             </div>
@@ -287,7 +299,8 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-coding-quiz-iphone-mockup 1.png" alt="">
               </div>
-              <p class="project-p project-p-odd">Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and
+              <p class="project-p project-p-odd">Test your knowledgee with a timed JavaScript quiz. Wrong answers dock
+                your time and
                 decrease your
                 score.
               </p>
