add icosa-3d and try to tweak

--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
   <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/touch-icon-iphone-retina.png">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X36CVYVT19"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-X36CVYVT19');
-  </script>
   <title>T. Hakes | Web Developer</title>
 </head>
 
@@ -90,7 +81,7 @@
       <section class="jumbotron">
         <h1 class="intro-text">Hey! I'm Taylor. I just might be the new full stack junior dev you're looking for.</h1>
 
-        <svg class="jumbo-icosa" viewBox="0 0 393 447" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <!-- <svg class="jumbo-icosa" viewBox="0 0 393 447" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M217.409 20.3527L377.845 111.407L297.826 157.134L217.409 20.3527ZM282.006 159.821H111.481L196.743 14.7982L282.006 159.821ZM385.5 124.309V308.22L305.39 170.088L385.5 124.309ZM295.08 182.211L379.943 328.536L209.796 327.693L295.08 182.211ZM282.025 174.821L196.743 320.298L111.462 174.821H282.025ZM98.3624 182.135L183.634 327.596L13.0906 327.174L98.3624 182.135ZM176.108 20.3014L95.6529 157.147L15.1981 111.399L176.108 20.3014ZM204.211 342.665L364.67 343.461L203.813 434.131L204.211 342.665ZM189.211 342.61L188.813 434.096L28.3179 342.212L189.211 342.61ZM7.5 307.087V124.278L88.0498 170.079L7.5 307.087Z" />
           <defs>
@@ -101,7 +92,30 @@
               <stop offset="1" stop-color="var(--Palette4)" />
             </linearGradient>
           </defs>
-        </svg>
+        </svg> -->
+
+        <div class="icosa-3d">
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+          <div class="side"></div>
+        </div>
 
       </section>
       <section class="quote-section quote-1-section">
@@ -160,8 +174,7 @@
                   </g>
                 </svg>
               </div>
-              <p class="project-p project-p-odd">A Responsive website that utilizes the power of creative SVG, Greensock
-                (GSAP) &
+              <p class="project-p project-p-odd">A Responsive website that utilizes the power of creative SVG, Greensock (GSAP) &
                 ScrollMagic powered
                 animations to provide a fluid UI.</p>
             </div>
@@ -200,8 +213,7 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-tech-blog-iphone-mockup 1.png" alt="">
               </div>
-              <p class="project-p project-p-odd">Solo built, full stack site where users can view and create blog posts
-                and interact
+              <p class="project-p project-p-odd">Solo built, full stack site where users can view and create blog posts and interact
                 via the comments.
               </p>
             </div>
@@ -241,8 +253,7 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-gitnshape-iphone-mockup 1.png " alt="">
               </div>
-              <p class="project-p project-p-odd">Git N Shape is a health and fitness jump starter app that generates
-                tailored workout
+              <p class="project-p project-p-odd">Git N Shape is a health and fitness jump starter app that generates tailored workout
                 and nutrition
                 plans for users. Built with a team of 3 other developers.</p>
             </div>
@@ -299,8 +310,7 @@
               <div class="project-img-wrap">
                 <img class="iphone-mockup" src="./assets/images/mockups/half-coding-quiz-iphone-mockup 1.png" alt="">
               </div>
-              <p class="project-p project-p-odd">Test your knowledgee with a timed JavaScript quiz. Wrong answers dock
-                your time and
+              <p class="project-p project-p-odd">Test your knowledgee with a timed JavaScript quiz. Wrong answers dock your time and
                 decrease your
                 score.
               </p>
