update heroku app links

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 of 4 other developers.</p>
             </div>
             <div class="project-footer">
-              <a href="https://thawing-temple-09016.herokuapp.com/" target="_blank">Visit Website</a> //
+              <a href="https://pass-stache-sadboitay.herokuapp.com/" target="_blank">Visit Website</a> //
               <a href="https://github.com/andydhpkp/pass-stache" target="_blank">View Code</a>
             </div>
           </div>
@@ -206,7 +206,7 @@
               </p>
             </div>
             <div class="project-footer">
-              <a href="https://obscure-peak-50471.herokuapp.com/" target="_blank">Visit Website</a> // <a
+              <a href="https://tech-blog-sadboitay.herokuapp.com/" target="_blank">Visit Website</a> // <a
                 href="https://github.com/SadboiTay/tech-blog" target="_blank">View Code</a>
             </div>
           </div>
